# NeoBERT

./: .gitignore  CLAUDE.md  README.md  check_dataset_sizes.py  debug_scheduler.py  pyproject.toml  test_assertion.py  test_optimizer_config.py  test_scheduler_params.py
conf/: accelerate_ddp.yaml  accelerate_deepspeed_zero1.yaml  accelerate_deepspeed_zero2.yaml  accelerate_deepspeed_zero3.yaml  finetuning.yaml  glue.yaml  mteb.yaml  mteb_task_to_instruction_corpus.json  mteb_task_to_instruction_query.json  pretraining.yaml
conf/datacollator/: base.yaml  mlm_15.yaml  mlm_20.yaml
conf/dataloader/: base.yaml
conf/dataset/: contrastive.yaml  glue.yaml  refinedweb.yaml  wikibook.yaml
conf/model/: 120M.yaml  250M-opt.yaml  250M.yaml  bert.yaml  neobert.yaml
conf/optimizer/: adam.yaml  adamw.yaml  soap.yaml
conf/scheduler/: cosine_decay.yaml  glue.yaml  linear_decay.yaml
conf/streaming/: pretrain_streaming.yaml
conf/tokenizer/: google.yaml  llama.yaml
conf/trainer/: contrastive.yaml  glue.yaml  mlm.yaml
configs/: README.md  contrastive_neobert.yaml  eval_checkpoint_100k.yaml  evaluate_checkpoint.yaml  evaluate_neobert.yaml  glue_sst2.yaml  glue_stsb.yaml  pretrain_neobert.yaml  pretrain_neobert100m_100k_managed.yaml  pretrain_neobert100m_smollm2data.yaml  pretrain_neobert250m_smollm2data.yaml  pretrain_smollm2_custom_tokenizer.yaml  streaming_pretrain.yaml  test_gpu_pretrain.yaml  test_pretokenized.yaml  test_smollm2_streaming.yaml  test_streaming.yaml  test_tiny_contrastive.yaml  test_tiny_glue.yaml  test_tiny_pretrain.yaml  train_gpu_swiglu.yaml  train_small_custom_tokenizer.yaml
configs/accelerate/: README.md  fsdp2_2x5090.yaml  fsdp2_fp8_4gpu.yaml  fsdp2_no_shard_1gpu.yaml  fsdp2_no_shard_fp8_4gpu.yaml
configs/contrastive/: contrastive_neobert.yaml
configs/eval/: evaluate_checkpoint.yaml  evaluate_checkpoint_sst2.yaml  evaluate_mrpc.yaml  evaluate_sst2.yaml  glue_cola.yaml  glue_cola_v2.yaml  glue_mnli.yaml  glue_mrpc.yaml  glue_mrpc_v2.yaml  glue_qnli.yaml  glue_qqp.yaml  glue_rte.yaml  glue_sst2.yaml  glue_sst2_v2.yaml  glue_stsb.yaml  glue_wnli.yaml
configs/glue/: cola.yaml  mnli.yaml  mrpc.yaml  qnli.yaml  qqp.yaml  rte.yaml  sst2.yaml  stsb.yaml  wnli.yaml
configs/pretrain/: pretrain_gpu_small.yaml  pretrain_neobert100m_smollm2data.yaml
configs/pretraining/: pretrain_gpu_small.yaml  pretrain_neobert.yaml  pretrain_neobert100m_smollm2data.yaml  pretrain_neobert100m_smollm2data_dion2.yaml  pretrain_neobert100m_smollm2data_muonclip.yaml  pretrain_neobert100m_smollm2data_muonclip_noclip.yaml  pretrain_neobert250m_smollm2data.yaml  pretrain_neobert_fp8.yaml  pretrain_neobert_fp8_4gpu.yaml  pretrain_neobert_fp8_muon_no_shard_4gpu.yaml  pretrain_neobert_muonclip.yaml  pretrain_smoke.yaml  pretrain_streaming.yaml  train_small_custom_tokenizer.yaml
docs/: README.md  architecture.md  configuration.md  custom_tokenizers.md  dev.md  dion2_robustness_experiment.md  evaluation.md  export.md  exporting.md  installation.md  known_issues.md  quickstart.md  refactor_status.md  testing.md  training.md  troubleshooting.md
docs/guides/: evaluation.md  export.md  testing.md  (+3 more)
jobs/: README.md  example_evaluate.sh  example_pretrain.sh  experiment_dion2_robustness.sh  neobert-4096.sh  neobert.sh  pretrain_fp8_fsdp2_4gpu.sh  pretrain_muon_fp8_fsdp2_no_shard_4gpu.sh  pretrain_muon_fsdp2_no_shard.sh
scripts/: README.md  export_to_huggingface.py  run_all_glue.sh  run_full_glue.sh  summarize_glue.py
test_outputs_glue_random/: all_results.json  all_results_step_10.json  all_results_step_20.json  all_results_step_30.json
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_actual_functionality.py  test_collator_packing.py  test_config.py  test_config_system.py  test_contrastive_preprocess.py  test_huggingface_export.py  test_model_config_only.py  test_model_forward.py  test_muonclip_integration.py  test_muonclip_training.py  test_muonclip_unit.py  test_run_tests_script.py  test_task_smoke.py  test_tokenization_cache.py  test_tokenize_streaming.py  tokenizer_utils.py  validate_muonclip.py
(+196 files in other folders)
