[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neobert"
version = "0.0.0"
description = "A state-of-the-art update of BERT"
requires-python = ">= 3.10"
dependencies = [
    "torch",
    "accelerate",
    "deepspeed",
    "xformers",
    "transformers",
    "datasets",
    "wandb",
    "numpy",
    "scikit-learn",
    "evaluate",
    "mteb",
    "libaio",
    "tqdm",
    "einops",
    "pyyaml",
]
authors = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
maintainers = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
readme = "README.md"
license = { text = "MIT License" }
keywords = []

[project.optional-dependencies]
dev = ["black", "pytest", "pytest-cov", "pytest-clarity", "xeger"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["neobert*"]