[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm[toml] >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neobert"
dynamic = ["version"]
description = "A state-of-the-art update of BERT"
requires-python = ">= 3.10"
dependencies = [
    "accelerate",
    "datasets",
    "deepspeed",
    "einops",
    "evaluate",
    "libaio",
    "mteb",
    "numpy",
    "pyyaml",
    "scikit-learn",
    "torch",
    "tqdm",
    "transformers",
    "wandb",
    "xformers",
]
authors = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
maintainers = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
readme = "README.md"
license = { text = "MIT License" }
keywords = []

[project.optional-dependencies]
dev = ["ruff", "isort", "pytest", "pytest-cov", "pytest-clarity", "xeger"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["neobert*"]

[tool.setuptools_scm]
write_to = "src/neobert/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"