[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm[toml] >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neobert"
dynamic = ["version"]
description = "A state-of-the-art update of BERT"
requires-python = ">= 3.10"
dependencies = [
    "accelerate",
    "datasets",
    "deepspeed",
    "einops",
    "evaluate",
    "libaio",
    "mteb",
    "numpy",
    "pyyaml",
    "safetensors",
    "scikit-learn",
    "torch>=2.6.0",
    "tqdm",
    "transformers",
    "wandb",
    "liger-kernel>=0.6",
]
authors = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
maintainers = [
    { name = "Lola Le Breton", email = "lola.lebreton@mila.quebec" },
    { name = "Quentin Fournier", email = "quentin.fournier@mila.quebec" },
]
readme = "README.md"
license = { text = "MIT License" }
keywords = []

[project.optional-dependencies]
dev = ["ruff", "isort", "pytest", "pytest-cov", "pytest-clarity", "xeger"]
flash = ["flash-attn>=2.5"]
quant = ["torchao>=0.14.0"]
quant_te = ["transformer_engine[pytorch]"]
quant_all = ["torchao>=0.14.0", "transformer_engine[pytorch]"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["neobert*"]

[tool.setuptools_scm]
write_to = "src/neobert/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
# Keep default `pytest -q` runs focused on the curated test suite.
testpaths = ["tests"]
# Prevent accidental collection of scratch data/scripts and large artifacts.
norecursedirs = [
    "local-scratch",
    "outputs",
    "logs",
    "dist",
    "tokenized_data",
    ".git",
    ".venv",
    "build",
]
